0.7.0 (currently working on)
- [#2120] Change: Use tabs for indentation only at the beginning of lines
- [#2306] Change: Use the registrationBagBuilder in tx_seminars_frontEndRegistrationsList
- [#2305] Feature: Create a frontEndView class for the seminar manager
- [#2208] Change: Use the seminar and registration bag builder in pi1
- [#2303] Change: Use the seminarbagbuilder in tx_seminars_pi1->getAdditionalQueryParameters()
- [#2300] Change: Change the parameter of tx_seminars_seminarbagbuilder::limitToPlaces() to an array
- [#2301] Change: Change the parameter of tx_seminars_seminarbagbuilder::limitToEventTypes() to an array
- [#2116] Feature: Add a setting "favorites PID" in the setup and flexforms
- [#2297] Change: Add a method getOrderByForListView() to tx_seminars_pi1
- [#2290] Feature: Add a method createRegistrationBagBuilder() to tx_seminars_pi1
- [#2291] Change: tx_seminars_bagbuilder->setSourcePages() should set the source pages for the main bag table
- [#2289] Feature: Add a method createSeminarBagBuilder() to tx_seminars_pi1
- [#2287] Feature: Add a method setOrderByEventColumn() to tx_seminars_registrationbagbuilder
- [#2257] Fix: Pagination in FE lists is broken
- [#2271] Fix: Crash in the "events by me" list
- [#1897] Fix: Double assignment in a code line
- [#2276] Fix: Remove some code warnings
- [#2255] Change: Move hiding columns to separate methods in tx_seminars_pi1
- [#2247] Feature: Add a method limitToAttendee() to tx_seminars_registrationBagBuilder
- [#2230] Change: Remove the TSFE manipulation from test_testcase
- [#2253] Change: Rename tx_seminars_pi1CategoryList to tx_seminars_frontEndCategoryList
- [#1472] Change: Use the oelib configcheck and drop our own copy
- [#1476] Change: Drop seminars_templatehelper
- [#2250] Fix: Use bag::count instead of countWithoutLimit
- [#2248] Fix: Fix the order of __destruct and unset calls
- [#1950] Feature: Also show data from the registration records in the FE registration lists