@@ -614,25 +614,12 @@
 <!-- ###VIEW_CATEGORIES### -->
 <div###CLASS_CATEGORYLIST###>
 	<p>###LABEL_WE_OFFER_EVENTS_IN_CATEGORIES###</p>
-	<table summary="">
-		<thead>
-			<tr>
-				<th scope="col">###LABEL_CATEGORY###</th>
-			</tr>
-		</thead>
-		<tbody>
-###ALL_CATEGORY_ITEMS###
-		</tbody>
-	</table>
+	<ul>###ALL_CATEGORY_ITEMS###</ul>
 </div>
 <!-- ###VIEW_CATEGORIES### -->
 
 <!-- ###SINGLE_CATEGORY_ITEM### -->
-			<tr>
-				<td###CLASS_CATEGORY_ITEM###>
-					###CATEGORY_TITLE###
-				</td>
-			</tr>
+	<li>###CATEGORY_TITLE###</li>
 <!-- ###SINGLE_CATEGORY_ITEM### -->
 
 <!-- ###VIEW_NO_CATEGORIES### -->
